--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "scripts": {
     "test": "jest"
   },
-  "jest": {
-    "testEnvironment": "node"
-  },  
   "dependencies": {
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.2.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.4"
   }
